[project]
name = "trello-archiver"
version = "0.1.0"
description = "Archive Trello cards to SQLite with web UI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "py-trello>=0.20.1",
    "dash>=2.14.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "dash-bootstrap-components>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
